--- a/isi.html
+++ b/isi.html
@@ -49,14 +49,6 @@
                     <input type="text" 
                            placeholder="Ketik pesan Anda di sini..." 
                            class="flex-1 bg-gray-700 text-white border-0 rounded-lg px-4 py-3 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-purple-500">
-                    <button class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700 transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50">
-                        <span class="flex items-center space-x-2">
-                            <span>Kirim</span>
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
-                            </svg>
-                        </span>
-                    </button>
                 </div>
             </div>
         </main>
@@ -71,6 +63,30 @@
             const messageDiv = document.createElement('div');
             messageDiv.className = `flex items-start ${isUser ? 'justify-end' : ''} animate__animated animate__fadeIn`;
 
+            // Hapus semua tanda bintang (*) sebelum memproses teks
+            const cleanedMessage = message.replace(/\*/g, '');
+
+            // Format teks menjadi HTML berdasarkan pola tertentu
+            const formattedMessage = cleanedMessage
+                .split('\n\n') // Pisahkan blok teks berdasarkan dua newline
+                .map(block => {
+                    if (block.startsWith('1.') || block.startsWith('2.') || block.startsWith('3.')) {
+                        // Format nomor (list bernomor)
+                        return `<ol class="list-decimal list-inside text-white mb-2">
+                                    ${block.split('\n').map(item => `<li>${item.substring(2).trim()}</li>`).join('')}
+                                </ol>`;
+                    } else if (block.startsWith('#')) {
+                        // Format heading
+                        const headingLevel = block.match(/^#+/)[0].length; // Hitung jumlah #
+                        const content = block.replace(/^#+\s*/, ''); // Hapus tanda #
+                        return `<h${headingLevel} class="text-purple-400 font-bold mb-2">${content}</h${headingLevel}>`;
+                    } else {
+                        // Default: paragraf biasa
+                        return `<p class="text-white mb-4">${block.trim()}</p>`;
+                    }
+                })
+                .join(''); // Gabungkan elemen-elemen menjadi string HTML
+
             const messageHTML = `
                 ${!isUser ? `
                     <div class="w-8 h-8 rounded-full bg-purple-600 flex items-center justify-center text-white font-bold ring-2 ring-purple-400 ring-opacity-50">
@@ -78,7 +94,7 @@
                     </div>
                 ` : ''}
                 <div class="${isUser ? 'mr-4 bg-indigo-600' : 'ml-4 bg-gray-700'} rounded-lg p-3 max-w-[80%] shadow-lg">
-                    <p class="text-white"></p>
+                    ${formattedMessage}
                 </div>
                 ${isUser ? `
                     <div class="w-8 h-8 rounded-full bg-indigo-500 flex items-center justify-center text-white font-bold ring-2 ring-indigo-400 ring-opacity-50">
@@ -90,11 +106,11 @@
             messageDiv.innerHTML = messageHTML;
             chatContainer.appendChild(messageDiv);
 
-            const textElement = messageDiv.querySelector('p');
-            textElement.textContent = message;
-
             chatContainer.parentElement.scrollTop = chatContainer.parentElement.scrollHeight;
         }
+
+
+
 
         sendButton.addEventListener('click', async () => {
             if (input.value.trim()) {
@@ -105,7 +121,7 @@
                 try {
                     // Replace with your actual API key and endpoint
                     const API_KEY = 'YOUR_ACTUAL_API_KEY';
-                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${'AIzaSyACg_9dA61qCtH7n8D_-9tUw7Dw3Kdb-Tk'}`, {
+                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${'AIzaSyACg_9dA61qCtH7n8D_-9tUw7Dw3Kdb-Tk'}`, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -116,7 +132,22 @@
                             }]
                         }),
                     });
+                    // const API_KEY = ''; // Ganti dengan OpenAI API Key Anda
 
+                    // const response = await fetch('https://api.openai.com/v1/chat/completions', {
+                    //     method: 'POST',
+                    //     headers: {
+                    //         'Content-Type': 'application/json',
+                    //         'Authorization': `Bearer ${API_KEY}`,
+                    //     },
+                    //     body: JSON.stringify({
+                    //         model: 'gpt-4o-mini', // Model yang digunakan
+                    //         messages: [
+                    //             { role: 'user', content: message } // Ganti "message" dengan input pengguna
+                    //         ],
+                    //         temperature: 1, // Atur parameter suhu sesuai kebutuhan
+                    //     }),
+                    // });
                     if (!response.ok) {
                         throw new Error(`HTTP error! status: ${response.status}`);
                     }
